<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/fondo"
    tools:context="com.android.training.zoologico.main.PantallaPrincipal">

    <ImageView
        android:id="@+id/icono"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/text_icon_descriptor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/text_app_id"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/appId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text_app_name"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/appVersionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text_app_code"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/appVersionCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/text_app_controller"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/appController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zoo_negro"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

</LinearLayout>